fix (bbk): add text-aligh to language elements to properly align arabic

--- a/buku-bacaan-koptik/web/components/document/document-components.css
+++ b/buku-bacaan-koptik/web/components/document/document-components.css
@@ -35,6 +35,7 @@ Text Language {
 	flex: 1 0 10%;
 	min-width: 0;
 	padding: 4px;
+	text-align: start;
 	overflow-wrap: break-word;
 }
 Text Language#English { order: 1; }
